--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "node_modules/js-libs"]
 	path = node_modules/js-libs
 	url = https://github.com/allblue-pl/js_js-libs
+[submodule "node_modules/ab-fs-matcher"]
+	path = node_modules/ab-fs-matcher
+	url = https://github.com/allblue-pl/node_ab-fs-matcher
+[submodule "node_modules/ab-fs"]
+	path = node_modules/ab-fs
+	url = https://github.com/allblue-pl/node_ab-fs
